[package]
name = "darkroom-rs"
version = "0.1.0"
authors = ["codenoid <14269809+codenoid@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-files = "0.1.4"
lazy_static = "1.3.0"
serde_json = "1.0"
raster = "0.2.0"
hashbrown = "0.6"